--- a/CommissionModule/src/main/resources/content/Language_ru.properties
+++ b/CommissionModule/src/main/resources/content/Language_ru.properties
@@ -26,3 +26,58 @@ customer = \u0417\u0430\u043A\u0430\u0437\u0447\u0438\u043A
 not-indicated = \u041D\u0435 \u0443\u043A\u0430\u0437\u0430\u043D\u043E
 allocated-amount = \u0412\u044B\u0434\u0435\u043B\u0435\u043D\u043D\u0430\u044F \u0441\u0443\u043C\u043C\u0430
 saving = \u042D\u043A\u043E\u043D\u043E\u043C\u0438\u044F
+
+conditions-customer = \u0423\u0441\u043B\u043E\u0432\u0438\u044F \u0437\u0430\u043A\u0430\u0437\u0447\u0438\u043A\u0430
+conditions-supplier = \u0423\u0441\u043B\u043E\u0432\u0438\u044F \u043F\u043E\u0441\u0442\u0430\u0432\u0449\u0438\u043A\u0430
+
+other_information=\u041F\u0420\u041E\u0427\u0410\u042F \u0418\u041D\u0424\u041E\u0420\u041C\u0410\u0426\u0418\u042F
+
+bid_delivery_address = PLACE OF DELIVERY OF THE PRODUCT PERFORMANCE WORKS, RENDERING SERVICES
+delivery_address = \u041C\u0415\u0421\u0422\u041E \u041F\u041E\u0421\u0422\u0410\u0412\u041A\u0418 \u0422\u041E\u0412\u0410\u0420\u0410 \u0412\u042B\u041F\u041E\u041B\u041D\u0415\u041D\u0418\u042F \u0420\u0410\u0411\u041E\u0422, \u041E\u041A\u0410\u0417\u0410\u041D\u0418\u042F \u0423\u0421\u041B\u0423\u0413
+bid_delivery_address =
+#block first,second 
+bid_task_each = Assignment for each lot separately
+bid_task_whole = Assignment for the entire order
+
+#second block
+delivery_time = \u0421\u0420\u041E\u041A \u041F\u041E\u0421\u0422\u0410\u0412\u041A\u0418 \u0422\u041E\u0412\u0410\u0420\u0410, \u0412\u042B\u041F\u041E\u041B\u041D\u0415\u041D\u0418\u042F \u0420\u0410\u0411\u041E\u0422, \u041E\u041A\u0410\u0417\u0410\u041D\u0418\u042F \u0423\u0421\u041B\u0423\u0413
+delivery=\u0421\u0440\u043E\u043A \u043F\u043E\u0441\u0442\u0430\u0432\u043A\u0438
+bid_delivery_time = 
+bid_conditions_of_customer = \u0423\u0441\u043B\u043E\u0432\u0438\u044F \u0437\u0430\u043A\u0430\u0437\u0447\u0438\u043A\u0430:
+
+#third block
+validity = \u0421\u0420\u041E\u041A \u0414\u0415\u0419\u0421\u0422\u0412\u0418\u042F \u0422\u0415\u041D\u0414\u0415\u0420\u041D\u041E\u0419 \u0417\u0410\u042F\u0412\u041A\u0418
+tenders=\u0421\u0440\u043E\u043A \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044F \u0442\u0435\u043D\u0434\u0435\u0440\u043D\u043E\u0439 \u0437\u0430\u044F\u0432\u043A\u0438
+bid_validity_tenders = 
+
+#fourth 
+software_application = \u041E\u0411\u0415\u0421\u041F\u0415\u0427\u0415\u041D\u0418\u0415 \u0417\u0410\u042F\u0412\u041A\u0418
+bid_own_offer = \u0421\u043E\u0431\u0441\u0442\u0432\u0435\u043D\u043D\u043E\u0435 \u043F\u0440\u0435\u0434\u043B\u043E\u0436\u0435\u043D\u0438\u0435
+bid_in_accordance_customer = \u0412 \u0441\u043E\u043E\u0442\u0432\u0435\u0442\u0441\u0442\u0432\u0438\u0438 \u0441 \u0443\u0441\u043B\u043E\u0432\u0438\u044F\u043C\u0438 \u0437\u0430\u043A\u0430\u0437\u0447\u0438\u043A\u0430
+bid_ensuring_the_application_is_not_required =\u041E\u0431\u0435\u0441\u043F\u0435\u0447\u0435\u043D\u0438\u0435 \u0437\u0430\u044F\u0432\u043A\u0438 \u043D\u0435 \u0442\u0440\u0435\u0431\u0443\u0435\u0442\u0441\u044F
+bid_bonds =\u041E\u0431\u043B\u0438\u0433\u0430\u0446\u0438\u0438
+bid_bank_guarantee =\u0411\u0430\u043D\u043A\u043E\u0432\u0441\u043A\u0430\u044F \u0433\u0430\u0440\u0430\u043D\u0442\u0438\u044F
+bid_paper =\u0412\u0435\u043A\u0441\u0435\u043B\u044F
+bid_deposits =\u0414\u0435\u043F\u043E\u0437\u0438\u0442\u044B
+bid_Free_float =\u0410\u043A\u0446\u0438\u0438 \u0432 \u0441\u0432\u043E\u0431\u043E\u0434\u043D\u043E\u043C \u043E\u0431\u0440\u0430\u0449\u0435\u043D\u0438\u0438
+bid_percentage =\u0412 \u043F\u0440\u043E\u0446\u0435\u043D\u0442\u0430\u0445 %
+big_term_and_procedure_of_the_software_application = \u0421\u0440\u043E\u043A \u0438 \u043F\u043E\u0440\u044F\u0434\u043E\u043A \u043F\u0440\u0435\u0434\u043E\u0441\u0442\u0430\u0432\u043B\u0435\u043D\u0438\u044F \u043E\u0431\u0435\u0441\u043F\u0435\u0447\u0435\u043D\u0438\u044F \u0438\u0441\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u044F \u043A\u043E\u043D\u0442\u0440\u0430\u043A\u0442\u0430
+bid_percent_software_application = 
+bid_software_application =
+#five
+enforcement = \u041E\u0411\u0415\u0421\u041F\u0415\u0427\u0415\u041D\u0418\u0415 \u0418\u0421\u041F\u041E\u041B\u041D\u0415\u041D\u0418\u042F \u041A\u041E\u041D\u0422\u0420\u0410\u041A\u0422\u0410
+bid_performance_contract=Performance contract
+bid_enforcement = 
+bid_percent_enforcement = 
+
+#six
+other_conditions = \u041F\u0420\u041E\u0427\u0418\u0415 \u0423\u0421\u041B\u041E\u0412\u0418\u042F
+big_payment = \u041E\u043F\u043B\u0430\u0442\u0430
+big_assignment_for_each_lot_separately = Assignment for each lot separately
+big_assignment_for_the_entire_order = Assignment for the entire order
+big_price_of_delivery = \u0426\u0435\u043D\u0430 \u043F\u043E\u0441\u0442\u0430\u0432\u043A\u0438
+big_concomitant_conditions = \u0421\u043E\u043F\u0443\u0442\u0441\u0442\u0432\u0443\u044E\u0449\u0438\u0435 \u0443\u0441\u043B\u043E\u0432\u0438\u044F
+bid_performance_contract = Term and procedure for granting security for performance of the contract
+bid_assignment_lot_payment = 
+bid_assignment_lot_delivery = 
+bid_assignment_lot_conditions = 
